--- a/practical-react/9-date-picker/src/App.css
+++ b/practical-react/9-date-picker/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,15 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  color: #aaa;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.datepicker {
+  background-color: #666;
+  color: #eee;
+  width: 300px;
+  height: 50px;
+  font-size: 48px;
+  text-align: center;
 }
